--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,9 @@ jobs:
       contents: read
       attestations: write
     runs-on: ubuntu-latest
-
+    env:
+      GH_TOKEN: ${{ github.token }} # Required for GitHub CLI
+      
     strategy:
       matrix:
         node: [22.x]
