--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ github.token }} # Required for GitHub CLI
-      
     strategy:
       matrix:
         node: [22.x]
@@ -46,16 +45,30 @@ jobs:
           subject-path: dist
           sbom-path: sbom.json
       - run: gh attestation verify dist/index.html -R ${{ github.repository }}
+  
+  lint:
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [22.x]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'npm'
+      - uses: austenstone/.github/.github/actions/npm-ci-cache@main
+      - run: npm run lint
+
   test:
     permissions:
       contents: read
     runs-on: ubuntu-latest
-      
     strategy:
       matrix:
         node: [22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -64,3 +77,34 @@ jobs:
           cache: 'npm'
       - uses: austenstone/.github/.github/actions/npm-ci-cache@main
       - run: npm test
+    
+  docs:
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [22.x]
+    steps:
+      - run: npm install typedoc
+      - run: npm run doc
+      - uses: actions/upload-artifact@v4
+        with:
+          name: docs
+          path: docs
+
+  deploy-docs:
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: docs
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: docs
