--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:angular-actions": "node dist/angular-actions/server/server.mjs"
+    "serve:ssr:angular-actions": "node dist/angular-actions/server/server.mjs",
+    "doc": "typedoc src/main.ts"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "typedoc": "^0.26.5",
     "typescript": "~5.5.2"
   }
 }
