--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,8 +86,7 @@ jobs:
       matrix:
         node: [22.x]
     steps:
-      - run: npm install typedoc
-      - run: npm run doc
+      - run: npx typedoc src/main.ts
       - uses: actions/upload-artifact@v4
         with:
           name: docs
