--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,8 @@ jobs:
       matrix:
         node: [22.x]
     steps:
-      - run: npx typedoc src/main.ts
+      - run: npm i -g typedoc
+      - run: typedoc src/main.ts
       - uses: actions/upload-artifact@v4
         with:
           name: docs
