--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'npm'
       - uses: austenstone/.github/.github/actions/npm-ci-cache@main
-      - run: ng test --browsers=Headless --no-watch
+      - run: ng test --watch=false --browsers=ChromeHeadless
     
   docs:
     permissions:
@@ -85,6 +85,7 @@ jobs:
       matrix:
         node: [22.x]
     steps:
+      - uses: actions/checkout@v4
       - run: npm i -g typedoc
       - run: typedoc src/main.ts
       - uses: actions/upload-artifact@v4
