--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,11 @@ jobs:
         node: [22.x]
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'npm'
+      - uses: austenstone/.github/.github/actions/npm-ci-cache@main
       - run: npm i -g typedoc
       - run: typedoc src/main.ts
       - uses: actions/upload-artifact@v4
