--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,17 +81,13 @@ jobs:
     permissions:
       contents: read
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [22.x]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 22.x
           cache: 'npm'
       - uses: austenstone/.github/.github/actions/npm-ci-cache@main
-      - run: npm i -g typedoc
       - run: typedoc src/main.ts
       - uses: actions/upload-artifact@v4
         with:
