--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
           node-version: 22.x
           cache: 'npm'
       - uses: austenstone/.github/.github/actions/npm-ci-cache@main
-      - run: typedoc src/main.ts
+      - run: npm run doc
       - uses: actions/upload-artifact@v4
         with:
           name: docs
