chore: Update ci.yml workflow to use npm ci instead of custom action for caching npm dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,8 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
-      - uses: austenstone/.github/.github/actions/npm-ci-cache@main
+      # - uses: austenstone/.github/.github/actions/npm-ci-cache@main
+      - run: npm ci
       - run: ng test --watch=false --browsers=ChromeHeadless
     
   docs:
