chore: Update ci.yml workflow to use actions/upload-artifact@v4 for uploading build artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,10 @@ jobs:
         with:
           subject-path: dist
           sbom-path: sbom.json
+      - uses: actions/upload-artifact@v4
+        with:
+          name: sbom
+          path: sbom.json
   
   lint:
     permissions:
